# raytr

./: .gitignore  Body.h  CMakeLists.txt  CMakeLists.txt.user.5ec42bf  Camera.cpp  Camera.h  Color.cpp  Color.h  Ground.cpp  Ground.h  Light.cpp  Light.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Vec3.cpp  Vec3.h  World.cpp  World.h  ]  aacube.cpp  aacube.h  body.cpp  body.h  camera.cpp  camera.h  color.cpp  color.h  common.h  equation.cpp  equation.h  ground.cpp  light.cpp  light.h  (+14 more)
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  raytr
